[gd_scene load_steps=6 format=3 uid="uid://c0nola3hywvao"]

[ext_resource type="Script" path="res://scripts/collectable_bubble.gd" id="1_njl8e"]
[ext_resource type="Texture2D" uid="uid://rkdi136brshn" path="res://assets/sprites/bulle un peu styl√©.png" id="2_dfh5l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0ik8a"]
atlas = ExtResource("2_dfh5l")
region = Rect2(0, 50, 640, 623)

[sub_resource type="SpriteFrames" id="SpriteFrames_3pqbv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ik8a")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_q87wy"]

[node name="CollectableBubble" type="Node2D"]
script = ExtResource("1_njl8e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.0417336, 0.0417335)
sprite_frames = SubResource("SpriteFrames_3pqbv")
animation = &"Idle"
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_q87wy")
metadata/_edit_lock_ = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="ChangeDirectionTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_change_direction_timer_timeout"]
